<resources>
    <string name="app_name">IntesaVincente</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="giocaSquadre">GIOCA A SQUADRE</string>
    <string name="allenamento">ALLENAMENTO</string>
    <string name="crea_gruppo">CREA GRUPPO</string>
    <string name="unisciti_a_gruppo">UNISCITI A GRUPPO</string>
    <string name="indovinatore">INDOVINATORE</string>
    <string name="suggeritore">SUGGERITORE</string>
    <string name="unisciti_come">Unisciti come</string>
    <string name="avanti">Avanti</string>

    <string name="inserisciParpla">INSERISCI PAROLA</string>
    <string name="suggerimento">Parola intuita</string>
    <string name="conferma">CONFERMA</string>

    <string name="inserisci_nome_gruppo">Inserisci nome gruppo</string>

    <string name="modificaProfilo">Modifica il tuo profilo</string>
    <string name="nickname">Nickname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="salvaModifiche">SALVA MODIFICHE</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
     <string name="forgotPWD">hai dimenticato la password?</string>
    <string name="accountEsistente">hai già un account?</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>