<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".InserisciParola">

    <Button
        android:id="@+id/button_conferma"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:backgroundTint="@color/orange"
        android:elevation="8dp"
        android:text="@string/conferma"
        android:textSize="20sp"
        app:cornerRadius="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_InserisciParola"
        app:layout_constraintVertical_bias="0.225" />

    <EditText
        android:id="@+id/editText_InserisciParola"
        android:layout_width="364dp"
        android:layout_height="66dp"
        android:ems="10"
        android:hint="@string/suggerimento"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_inserisciParola"
        app:layout_constraintVertical_bias="0.137"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView_inserisciParola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inserisciParpla"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35000002" />
</androidx.constraintlayout.widget.ConstraintLayout>